--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,16 @@ version: "3.7"
 
 services:
   postgres:
-    image: postgres:16-alpine-ssl
+    image: rg.fr-par.scw.cloud/paswolf/postgres:16-alpine-ssl
     restart: unless-stopped
     environment:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=kF6qWvUISGgTdFD52G4e
       - POSTGRES_DB=paswolf_tf
     ports:
-      - 5432:5432
+      - "5432:5432"
     volumes:
-      - postgres:/var/lib/postgresql/data
+      - "postgres:/var/lib/postgresql/data"
     networks:
       - database
 
