--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -1,19 +1,23 @@
 version: '3'
 services:
   mysql:
-    image: mysql:8.0
+    image: registry.paswolf.com/mysql:8.0
     restart: unless-stopped
-    command: --default-authentication-plugin=mysql_native_password
     environment:
       - MYSQL_ROOT_PASSWORD=XJ06ueie
       - MYSQL_USER=keycloak
       - MYSQL_PASSWORD=42usNJp3
       - MYSQL_DATABASE=keycloak
+    command:
+      - "--ssl-cert=/certs/paswolf.com.cer"
+      - "--ssl-key=/certs/paswolf.com.key"
+      - "--ssl=1"
+      - "--default-authentication-plugin=mysql_native_password"
     ports:
       - "3306:3306"
-    volumes:
-      - "mysql:/var/lib/mysql"
+#    volumes:
+#      - "mysql:/var/lib/mysql"
 
-volumes:
-  mysql:
-    external: true
+#volumes:
+#  mysql:
+#    external: true
