Aaaand commented in some shit for NAS

--- a/mysql/docker-compose.yml
+++ b/mysql/docker-compose.yml
@@ -16,9 +16,9 @@ services:
       - "--default-authentication-plugin=mysql_native_password"
     ports:
       - "3306:3306"
-#    volumes:
-#      - "mysql:/var/lib/mysql"
+    volumes:
+      - "mysql:/var/lib/mysql"
 
-#volumes:
-#  mysql:
-#    external: true
+volumes:
+  mysql:
+    external: true
